--- a/main.html
+++ b/main.html
@@ -30,16 +30,6 @@
 
 
 </head>
-<!-- <div id="nozzelDiv" class="text-center" style="position: center;">
-    <img id="droplet" class="responsive" src="droplet.svg" alt="Responsive image">
-</div>
-<div class="text-center" style="position: relative;">
-    <img id="nozzle" class="responsive" src="nozzle_centered.svg" alt="Responsive image">
-    <img id="fluid" onclick=squirt() class="responsive" src="Body_Cap_Cross.svg" alt="Responsive image">
-</div>
-<div id="dropletDiv" class="text-center" style="position: center;">
-    <img id="nozzle" class="responsive" src="nozzle_centered.svg" alt="Responsive image">
-</div> -->
 <body style="background-color:grey;">
     
     <div class="container-fluid bg-dark">
@@ -48,11 +38,11 @@
                 <div class="text-center" style="position: relative;">
                 </div>
                 <div class="text-center" style="position: relative;">
-                    <img id="droplet" class= "droplet" src="droplet.svg" alt="Responsive image">
-                    <img id="droplet2" class= "droplet" src="droplet.svg" alt="Responsive image">
-                    <img id="droplet3" class= "droplet" src="droplet.svg" alt="Responsive image">
-                    <img id="nozzle"  src="nozzle_centered.svg" alt="Responsive image">
-                    <img id="fluid" onclick=squirt() src="Body_Cap_Cross.svg" alt="Responsive image"></img>
+                    <img id="droplet" class= "droplet" src="assets/droplet.svg" alt="Responsive image">
+                    <img id="droplet2" class= "droplet" src="assets/droplet.svg" alt="Responsive image">
+                    <img id="droplet3" class= "droplet" src="assets/droplet.svg" alt="Responsive image">
+                    <img id="nozzle"  src="assets/nozzle_centered.svg" alt="Responsive image">
+                    <img id="fluid" onclick=squirt() src="assets/Body_Cap_Cross.svg" alt="Responsive image"></img>
                 </div>
             </div>
           </div>
