fixed links to assets

--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styling.css">
+    <link rel="stylesheet" href="CSS/styling.css">
     <script src="JS/sanitizer_v0.01.js"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Sanitizer!</title>
+    <link rel="icon" type="image/png" href="assets/favicon.png"/>
+
     
 
 
 
 </head>
 <body style="background-color:grey;">
-    
     <div class="container-fluid bg-dark">
         <div class="container">
             <div class="center">
