changed bg color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body style="background-color:grey;">
+<body style="background-color:#4075fc;">
     <div class="container-fluid bg-dark">
         <div class="container">
             <div class="center">
@@ -30,15 +30,11 @@
                 </div>
             </div>
         </div>
-        <!-- Footer -->
         <footer class="page-footer font-small">
-            <!-- Copyright -->
             <div class="footer-copyright text-center py-3">© 2020 Copyright:
                 <a href="https://github.com/wenzelt"> TWenzel</a>
             </div>
-            <!-- Copyright -->
         </footer>
-        <!-- Footer -->
     </div>
 
 </body>
