--- a/index.html
+++ b/index.html
@@ -6,27 +6,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Covid-19 boredom combined with punny humor...">
     <meta name="author" content="@wenzelt ∫ Technical University of Munich">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
+
     <title>Sanitize yourself!</title>
-    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link rel="icon" type="image/png" href="assets/favicon.png"/>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styling.css">
+    <link rel="stylesheet" href="css/styling.css">
     <script src="JS/sanitizer_v0.01.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <script src="bootstrap/js/bootstrap.bundle.js"></script>
+    <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <!---->
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="CSS/bootstrap.min.css" rel="stylesheet">
+
 </head>
 
-<body style="background-color:#4075fc;">
-    <nav class="navbar navbar-light bg-light">
-        <!-- Navbar content -->Sanitizer_v0
+<body style="background-color:#ffffff;">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Sanitize yourself! </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item ">
+                </li>
+                <li class="nav-item">
+                </li>
+                <li class="nav-item ">
+
+
+                </li>
+                <li class="nav-item">
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <!-- Place this tag where you want the button to render. -->
+                <a class="github-button" href="https://github.com/wenzelt" data-size="large" aria-label="Follow @wenzelt on GitHub">Follow @wenzelt</a>
+            </form>
+        </div>
     </nav>
+
     <main role="main" class="container-fluid bg-dark" id="mid_wrapper">
+
+
         <div class="container" id=asset_container>
             <div class="center">
                 <div class="text-center" style="position: relative;">
@@ -35,69 +72,22 @@
                     <img id="droplet" class="droplet" src="assets/droplet.svg" alt="Responsive image">
                     <img id="droplet2" class="droplet" src="assets/droplet.svg" alt="Responsive image">
                     <img id="droplet3" class="droplet" src="assets/droplet.svg" alt="Responsive image">
-                    <img id="nozzle" src="assets/nozzle_centered.svg" alt="Responsive image">
-                    <img id="fluid" onclick=squirt() src="assets/Body_Cap_Cross.svg" alt="Responsive image"></img>
+                    <img id="nozzle" class="img-fluid" src="assets/nozzle_centered.svg" alt="Responsive image"><!--maybe add carousel to fluid container for skins-->
+                    <img id="fluid" class="img-fluid" onclick=squirt() src="assets/Body_Cap_Cross.svg" alt="Responsive image" />
                 </div>
             </div>
         </div>
+
 
     </main>
-    <!-- Footer -->
-    <footer class="page-footer font-small cyan darken-3">
 
-        <!-- Footer Elements -->
-        <div class="container">
 
-            <!-- Grid row-->
-            <div class="row">
 
-                <!-- Grid column -->
-                <div class="col-md-12 py-5">
-                    <div class="mb-5 flex-center">
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-                        <!-- Facebook -->
-                        <a class="fb-ic">
-                            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                        </a>
-                        <!-- Twitter -->
-                        <a class="tw-ic">
-                            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                        </a>
-                        <!-- Google +-->
-                        <a class="gplus-ic">
-                            <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                        </a>
-                        <!--Linkedin -->
-                        <a class="li-ic">
-                            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                        </a>
-                        <!--Instagram-->
-                        <a class="ins-ic">
-                            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                        </a>
-                        <!--Pinterest-->
-                        <a class="pin-ic">
-                            <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-                        </a>
-                    </div>
-                </div>
-                <!-- Grid column -->
 
-            </div>
-            <!-- Grid row-->
 
-        </div>
-        <!-- Footer Elements -->
-
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-        </div>
-        <!-- Copyright -->
-
-    </footer>
-    <!-- Footer -->
-    </div>
 
 </body>
 
