--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styling.css">
+    <link rel="stylesheet" href="CSS/styling.css">
     <script src="JS/sanitizer_v0.01.js"></script>
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
