reformatting of page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 
-    <title>Sanitize yourself!</title>
+    <title>Sanitize!</title>
     <link rel="icon" type="image/png" href="assets/favicon.png"/>
 
     <!-- Required meta tags -->
@@ -21,15 +21,14 @@
     <script src="JS/sanitizer_v0.01.js"></script>
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <!---->
-    <!-- Bootstrap CSS -->
+
 
 </head>
 
 <body style="background-color:#ffffff;">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Sanitize yourself! </a>
+        <a class="navbar-brand" href="#">Sanitize! </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,7 +47,6 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <!-- Place this tag where you want the button to render. -->
                 <a class="github-button" href="https://github.com/wenzelt" data-size="large" aria-label="Follow @wenzelt on GitHub">Follow @wenzelt</a>
             </form>
         </div>
