--- a/index.html
+++ b/index.html
@@ -27,58 +27,61 @@
 
 <body style="background-color:#ffffff;">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Sanitize! </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Sanitize! </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item ">
-                </li>
-                <li class="nav-item">
-                </li>
-                <li class="nav-item ">
-
-
-                </li>
-                <li class="nav-item">
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <a class="github-button" href="https://github.com/wenzelt" data-size="large" aria-label="Follow @wenzelt on GitHub">Follow @wenzelt</a>
-            </form>
-        </div>
-    </nav>
-
-    <main role="main" class="container-fluid bg-dark" id="mid_wrapper">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item ">
+            </li>
+            <li class="nav-item">
+            </li>
+            <li class="nav-item ">
 
 
-        <div class="container" id=asset_container>
-            <div class="center">
-                <div class="text-center" style="position: relative;">
-                </div>
-                <div class="text-center" style="position: relative;">
-                    <img id="droplet" class="droplet" src="assets/droplet.svg" alt="Responsive image">
-                    <img id="droplet2" class="droplet" src="assets/droplet.svg" alt="Responsive image">
-                    <img id="droplet3" class="droplet" src="assets/droplet.svg" alt="Responsive image">
-                    <img id="nozzle" class="img-fluid" src="assets/nozzle_centered.svg" alt="Responsive image"><!--maybe add carousel to fluid container for skins-->
-                    <img id="fluid" class="img-fluid" onclick=squirt() src="assets/Body_Cap_Cross.svg" alt="Responsive image" />
-                </div>
+            </li>
+            <li class="nav-item">
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <a class="github-button" href="https://github.com/wenzelt" data-size="large"
+               aria-label="Follow @wenzelt on GitHub">Follow @wenzelt</a>
+        </form>
+    </div>
+</nav>
+
+<main role="main" class="container-fluid bg-dark" id="mid_wrapper">
+
+
+    <div class="container" id=asset_container>
+        <div class="center">
+            <div class="text-center" style="position: relative;">
+            </div>
+            <div class="text-center" style="position: relative;">
+                <img id="droplet" class="droplet" src="assets/droplet.svg" alt="Responsive image">
+                <img id="droplet2" class="droplet" src="assets/droplet.svg" alt="Responsive image">
+                <img id="droplet3" class="droplet" src="assets/droplet.svg" alt="Responsive image">
+                <img id="nozzle" class="img-fluid" src="assets/nozzle_centered.svg" alt="Responsive image">
+                <!--maybe add carousel to fluid container for skins-->
+                <img id="fluid" class="img-fluid" onclick=squirt() src="assets/Body_Cap_Cross.svg"
+                     alt="Responsive image"/>
             </div>
         </div>
+    </div>
 
 
-    </main>
+</main>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </body>
 
 
