added nozzle action

--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
             <li class="nav-item">
             </li>
             <li class="nav-item ">
-
-
             </li>
             <li class="nav-item">
             </li>
@@ -65,7 +63,7 @@
                 <img id="droplet" class="droplet" src="assets/droplet.svg" alt="Responsive image">
                 <img id="droplet2" class="droplet" src="assets/droplet.svg" alt="Responsive image">
                 <img id="droplet3" class="droplet" src="assets/droplet.svg" alt="Responsive image">
-                <img id="nozzle" class="img-fluid" src="assets/nozzle_centered.svg" alt="Responsive image">
+                <img id="nozzle" class="img-fluid" onclick=squirt() src="assets/nozzle_centered.svg" alt="Responsive image">
                 <!--maybe add carousel to fluid container for skins-->
                 <img id="fluid" class="img-fluid" onclick=squirt() src="assets/Body_Cap_Cross.svg"
                      alt="Responsive image"/>
