--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body style="background-color:#ffffff;">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Sanitize! </a>
+    <a class="navbar-brand" href="#">Sanitize Online! </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
