--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta name="description" content="Covid-19 boredom combined with punny humor...">
     <meta name="author" content="@wenzelt ∫ Technical University of Munich">
 
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
 
     <title>Sanitize!</title>
     <link rel="icon" type="image/png" href="assets/favicon.png"/>
@@ -21,8 +19,6 @@
     <script src="JS/sanitizer_v0.01.js"></script>
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-
-
 </head>
 
 <body style="background-color:#ffffff;">
@@ -63,7 +59,8 @@
                 <img id="droplet" class="droplet" src="assets/droplet.svg" alt="Responsive image">
                 <img id="droplet2" class="droplet" src="assets/droplet.svg" alt="Responsive image">
                 <img id="droplet3" class="droplet" src="assets/droplet.svg" alt="Responsive image">
-                <img id="nozzle" class="img-fluid" onclick=squirt() src="assets/nozzle_centered.svg" alt="Responsive image">
+                <img id="nozzle" class="img-fluid" onclick=squirt() src="assets/nozzle_centered.svg"
+                     alt="Responsive image">
                 <!--maybe add carousel to fluid container for skins-->
                 <img id="fluid" class="img-fluid" onclick=squirt() src="assets/Body_Cap_Cross.svg"
                      alt="Responsive image"/>
