--- a/index.html
+++ b/index.html
@@ -1,83 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Covid-19 boredom combined with punny humor...">
-    <meta name="author" content="@wenzelt ∫ Technical University of Munich">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta content="Covid-19 boredom combined with punny humor..." name="description">
+    <meta content="@wenzelt ∫ Technical University of Munich" name="author">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <title>Sanitize!</title>
-    <link rel="icon" type="image/png" href="assets/favicon.png"/>
-
-    <!-- Required meta tags -->
+    <link href="assets/favicon.png" rel="icon" type="image/png"><!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/styling.css">
-    <script src="JS/sanitizer_v0.01.js"></script>
-    <!-- Place this tag in your head or just before your close body tag. -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link href="CSS/styling.css" rel="stylesheet">
+    <script src="JS/sanitizer_v0.01.js">
+    </script><!-- Place this tag in your head or just before your close body tag. -->
+
+    <script async defer src="https://buttons.github.io/buttons.js">
+    </script>
 </head>
-
 <body style="background-color:#ffffff;">
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Sanitize Online! </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
+    <a class="navbar-brand" href="#">Sanitize Online!</a>
+    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+            class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"><span
+            class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-            </li>
-            <li class="nav-item">
-            </li>
-            <li class="nav-item ">
-            </li>
-            <li class="nav-item">
-            </li>
+            <li class="nav-item"></li>
+            <li class="nav-item"></li>
+            <li class="nav-item"></li>
+            <li class="nav-item"></li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <a class="github-button" href="https://github.com/wenzelt" data-size="large"
-               aria-label="Follow @wenzelt on GitHub">Follow @wenzelt</a>
+            <a aria-label="Follow @wenzelt on GitHub" class="github-button" data-size="large"
+               href="https://github.com/wenzelt">Follow @wenzelt</a>
         </form>
     </div>
 </nav>
-
-<main role="main" class="container-fluid bg-dark" id="mid_wrapper">
-
-
-    <div class="container" id=asset_container>
+<main class="container-fluid bg-dark" id="mid_wrapper" role="main">
+    <div class="container" id="asset_container">
         <div class="center">
-            <div class="text-center" style="position: relative;">
-            </div>
-            <div class="text-center" style="position: relative;">
-                <img id="droplet" class="droplet" src="assets/droplet.svg" alt="Responsive image">
-                <img id="droplet2" class="droplet" src="assets/droplet.svg" alt="Responsive image">
-                <img id="droplet3" class="droplet" src="assets/droplet.svg" alt="Responsive image">
-                <img id="nozzle" class="img-fluid" onclick=squirt() src="assets/nozzle_centered.svg"
-                     alt="Responsive image">
-                <!--maybe add carousel to fluid container for skins-->
-                <img id="fluid" class="img-fluid" onclick=squirt() src="assets/Body_Cap_Cross.svg"
-                     alt="Responsive image"/>
-            </div>
+            <div class="text-center" style="position: relative;"></div>
+            <div class="text-center" style="position: relative;"><img alt="Responsive image" class="droplet"
+                                                                      id="droplet" src="assets/droplet.svg"> <img
+                    alt="Responsive image" class="droplet" id="droplet2" src="assets/droplet.svg"> <img
+                    alt="Responsive image" class="droplet" id="droplet3" src="assets/droplet.svg"> <img
+                    alt="Responsive image" class="img-fluid" id="nozzle" onclick="squirt()"
+                    src="assets/nozzle_centered.svg"> <!--maybe add carousel to fluid container for skins-->
+                <img alt="Responsive image" class="img-fluid" id="fluid" onclick="squirt()"
+                     src="assets/Body_Cap_Cross.svg"></div>
         </div>
     </div>
-
-
 </main>
-
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js">
+</script>
 </body>
-
-
 </html>
